--- a/task_1/main.ipynb
+++ b/task_1/main.ipynb
@@ -213,6 +213,16 @@
     "wb.save('data/students_result.xlsx')\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вывод: Освоил работу с Excel-файлами средствами Python.   \n",
+    "Научился использовать библиотеку openpyxl для чтения и записи данных.   \n",
+    "Научился строить столбчатые диаграммы с помощью matplotlib.   \n",
+    "Развил навыки обработки и визуализации табличных данных.    "
+   ]
   }
  ],
  "metadata": {
